--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,6 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  gap: 4px;
   width: 100%;
 }
 
@@ -15,7 +14,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 4px;
   width: 100%;
 }
 
@@ -26,4 +24,105 @@
 .favoriteArt > div {
   display: flex;
   gap: 24px;
+}
+
+#comment {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+}
+
+.comment-writing-container form {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.comment-writing-container input {
+  width: 789px;
+  height: 40px;
+  padding-left: 53px;
+  border: 1px solid #d8d8d8;
+  font-family: Open Sans;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 16.34px;
+  letter-spacing: 4%;
+  box-sizing: border-box;
+}
+.comment-writing-container input::placeholder {
+  color: #cccccc;
+}
+
+.comment-writing-container button {
+  width: 70px;
+  height: 40px;
+  left: 649px;
+  font-family: Open Sans;
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 16.34px;
+  letter-spacing: 4%;
+  border: none;
+  box-sizing: border-box;
+}
+
+.comment-writing-container button[type="reset"] {
+  background: #d8d8d8;
+}
+
+.comment-writing-container button[type="button"] {
+  background: #d7f9f6;
+}
+
+.comment-writing-container img {
+  position: absolute;
+  left: 11px;
+  top: 8px;
+  width: 24px;
+  height: 24px;
+  top: 8px;
+  left: 11px;
+}
+
+.comment-list {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+.comment-author {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  font-family: Open Sans;
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 16.34px;
+  letter-spacing: 4%;
+}
+
+.comment-author img {
+  width: 24px;
+  height: 24px;
+  top: 8px;
+  left: 16px;
+}
+
+.comment-item {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  border: 1px solid #e9e9e9;
+  padding: 8px 16px 24px;
+  box-sizing: border-box;
+}
+
+.comment-content {
+  font-family: Open Sans;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 16.34px;
+  letter-spacing: 0%;
 }
